# nix-demos

tldr-app/: .gitignore  app.nix  docker.nix  flake.nix  pyproject.toml
tldr-app/tldr_app/: main.py
